--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,2 +1,8 @@
-%h1 Messages#index
-%p Find me in app/views/messages/index.html.haml
+.wrapper
+  .chat-side
+    .side-header
+    .groups
+  .chat-main
+    .main-header
+    .messages
+    .form
