Add groups menu detail

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -2,6 +2,10 @@
   .chat-side
     .side-header
     .groups
+      .groups__menu
+        sample
+        .groups__menu__list
+        よろしくお願いします
   .chat-main
     .main-header
     .messages
