--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -3,8 +3,9 @@
     .side-header
     .groups
       .groups__menu
-        sample
         .groups__menu__list
+        sample
+        .groups__menu__list.groups__menu__list--slender
         よろしくお願いします
   .chat-main
     .main-header
