add .side-header detail

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,6 +1,12 @@
 .wrapper
   .chat-side
     .side-header
+      .side-header__box
+        .side-header__box__menu
+          .side-header__box__menu__list
+            test-abc
+          .side-header__box__menu__list.fas.fa-edit
+          .side-header__box__menu__list.fas.fa-cog
     .groups
       .groups__menu
         .groups__menu__list
