Add .main-header detail

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,4 +1,5 @@
 .flash-box
+  グループを作成しました
 .wrapper
   .chat-side
     .side-header
@@ -16,5 +17,12 @@
         よろしくお願いします
   .chat-main
     .main-header
+      .main-header__title
+        .main-header__title__name
+          sample
+        .main-header__title__info
+          Member : sample
+        .main-header__button
+          Edit
     .messages
     .form
