add .messages detail

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -25,4 +25,15 @@
         .main-header__button
           Edit
     .messages
+      .messages__menu
+        .messages__menu__list
+          .messages__menu__list__info
+            .messages__menu__list__info__name
+              test-abc
+            .messages__menu__list__info__date
+              2019/08/21(Wed) 15:25:59
+          .messages__menu__list__box
+            .messages__menu__list__box__text
+              よろしくお願いします
+            .messages__menu__list__box__image
     .form
