Fix indet and Rename .main-header__button

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -12,9 +12,9 @@
     .groups
       .groups__menu
         .groups__menu__list
-        sample
+          sample
         .groups__menu__list.groups__menu__list--slender
-        よろしくお願いします
+          よろしくお願いします
   .chat-main
     .main-header
       .main-header__title
@@ -22,7 +22,7 @@
           sample
         .main-header__title__info
           Member : sample
-        .main-header__button
+        .main-header__edit-button
           Edit
     .messages
       .messages__menu
