Add .form detail

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -37,3 +37,10 @@
               よろしくお願いします
             .messages__menu__list__box__image
     .form
+      .form__box
+        .form__box__data
+          .form__box__data__text
+            type a message
+          .form__box__data.far.fa-image
+        .form__box__send-button
+          Send
