Rename ,groups__menu to change structure

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -10,10 +10,10 @@
           .side-header__box__menu__list.fas.fa-edit
           .side-header__box__menu__list.fas.fa-cog
     .groups
-      .groups__menu
-        .groups__menu__list
+      .group
+        .group__title
           sample
-        .groups__menu__list.groups__menu__list--slender
+        .group__latest-message
           よろしくお願いします
   .chat-main
     .main-header
