Change to link from div block

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -10,11 +10,12 @@
           .side-header__box__menu__list.fas.fa-edit
           .side-header__box__menu__list.fas.fa-cog
     .groups
-      .group
-        .group__title
-          sample
-        .group__latest-message
-          よろしくお願いします
+      =link_to " " do
+        .group
+          .group__title
+            sample
+          .group__latest-message
+            よろしくお願いします
   .chat-main
     .main-header
       .main-header__title
