--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -4,11 +4,11 @@
   .chat-side
     .side-header
       .side-header__box
-        .side-header__box__menu
-          .side-header__box__menu__list
+        %ul.side-header__box__menu
+          %li.side-header__box__menu__list
             test-abc
-          .side-header__box__menu__list.fas.fa-edit
-          .side-header__box__menu__list.fas.fa-cog
+          %li.side-header__box__menu__list.fas.fa-edit
+          %li.side-header__box__menu__list.fas.fa-cog
     .groups
       =link_to " " do
         .group
