Add .form detail

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -43,10 +43,11 @@
               よろしくお願いします
             .messages__menu__list__box__image
     .form
-      .form__box
+      %form.form__box
         .form__box__data
-          .form__box__data__text
-            type a message
-          .form__box__data.far.fa-image
+          %input.form__box__data__text{type: 'text', name: 'name', placeholder: 'type a text'}
+          %label.form__box__data
+            =fa_icon('image')
+            %input.form__box__data__image{type: 'file', name: 'image'}
         .form__box__send-button
           Send
