Add submit-button on .form

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -49,5 +49,4 @@
           %label.form__box__data
             =fa_icon('image')
             %input.form__box__data__image{type: 'file', name: 'image'}
-        .form__box__send-button
-          Send
+        %input.form__box__send-button{type: 'submit', value: 'Send'}
