--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,20 @@
 @import "./reset";
 @import " font-awesome ";
+
+.wrapper{
+  display: flex;
+  flex-direction: row;
+  width: 100vw;
+}
+
+.chat-side{
+  width: 300px;
+  height: 100vw;
+  margin: 0 0;
+  padding: 0 20px;
+}
+
+.chat-main{
+  width: calc(100vw - 300px;);
+  height: 100vw;
+}
