add syles to .side-header

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -4,9 +4,9 @@
   .chat-side
     .side-header
       .side-header__box
+        %p.side-header__box__user-name
+          test-abc
         %ul.side-header__box__menu
-          %li.side-header__box__menu__list
-            test-abc
           =link_to " " do
             %li.side-header__box__menu__list
               =fa_icon("edit")
