--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,9 @@
 
 $color-skyblue: #38AEF0;
 
+*{
+  box-sizing: border-box;
+}
 .flash-box{
   text-align: center;
   color: white;
@@ -18,8 +21,20 @@ $color-skyblue: #38AEF0;
 .chat-side{
   width: 300px;
   height: 100vw;
-  margin: 0 0;
+}
+
+.side-header{
+  background-color: #253141;
+  color: #ffffff;
   padding: 0 20px;
+  &__box{
+    display: flex;
+    justify-content: space-between;
+    &__menu{
+      display: flex;
+      flex-direction: row;
+    }
+  }
 }
 
 .chat-main{
