--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,25 +14,32 @@ $color-skyblue: #38AEF0;
 
 .wrapper{
   display: flex;
-  flex-direction: row;
   width: 100vw;
 }
 
 .chat-side{
   width: 300px;
   height: 100vw;
+  a{
+    color: white;
+  }
 }
 
 .side-header{
   background-color: #253141;
   color: #ffffff;
   padding: 0 20px;
+  height: 100px;
+  line-height: 100px;
   &__box{
     display: flex;
     justify-content: space-between;
+    &__user-name{
+      font-size: 16px;
+      font-weight: bold;
+    }
     &__menu{
       display: flex;
-      flex-direction: row;
     }
   }
 }
