Add styles to .group

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -16,10 +16,16 @@
     .groups
       =link_to " " do
         .group
-          .group__title
+          %p.group__title
             sample
-          .group__latest-message
+          %p.group__latest-message
             よろしくお願いします
+      =link_to " " do
+        .group
+          %p.group__title
+            sample-1
+          %p.group__latest-message
+            よろしくお願いします。
   .chat-main
     .main-header
       .main-header__title
