--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,6 +25,8 @@ $side-header-height: 100px;
 .chat-side{
   width: $chat-side-width;
   height: 100vw;
+  color: #ffffff;
+
   a{
     color: white;
     text-decoration: none;
@@ -42,7 +44,6 @@ $side-header-height: 100px;
     &__user-name{
       font-size: 16px;
       font-weight: bold;
-      color: #ffffff;
     }
     &__menu{
       display: flex;
@@ -57,7 +58,14 @@ $side-header-height: 100px;
 }
 
 .group{
-  
+  padding: 20px 0;
+  &__title{
+    font-size: 15px;
+    padding-bottom: 5px;
+  }
+  &__latest-message{
+    font-size: 11px;
+  }
 }
 .chat-main{
   width: calc(100vw - #{$chat-side-width});
