--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,7 @@
 
 // color
 $color-skyblue: #38AEF0;
+$color-info: #999999;
 // width or heigth
 $chat-side-width: 300px;
 $side-header-height: 100px;
@@ -70,4 +71,34 @@ $side-header-height: 100px;
 .chat-main{
   width: calc(100vw - #{$chat-side-width});
   height: 100vw;
+}
+
+.main-header{
+  display: flex;
+  justify-content: space-between;
+  padding: 0 40px;
+  border-bottom: solid thin #eeeeee;
+  a{
+    color: $color-skyblue;
+    text-decoration: none;
+  }
+  &__title{
+    &__name{
+      font-size: 20px;
+      color: #333333;
+      padding-top: 35px;
+    }
+    &__info{
+      font-size: 12px;
+      color: $color-info;
+      padding-top: 15px;
+    }
+  }
+  &__edit-button{
+    border: solid thin #{$color-skyblue};
+    padding: 0 20px;
+    margin-top: 28px;
+    height: 40px;
+    line-height: 40px;
+  }
 }
