add styles to .form

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -52,7 +52,7 @@
       %form.form__box
         .form__box__data
           %input.form__box__data__text{type: 'text', name: 'name', placeholder: 'type a text'}
-          %label.form__box__data
+          %label.form__box__data__image
             =fa_icon('image')
-            %input.form__box__data__image{type: 'file', name: 'image'}
+            %input{type: 'file', name: 'image'}
         %input.form__box__send-button{type: 'submit', value: 'Send'}
