--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -102,3 +102,46 @@ $side-header-height: 100px;
     line-height: 40px;
   }
 }
+
+.form{
+  background-color: $color-info;
+  position: relative;
+  height: 90px;
+  &__box{
+    display: flex;
+    padding: 0 40px;
+    height: 50px;
+    line-height: 50px;
+    width: 100%;
+    position: absolute;
+    top: 20px;
+    &__data{
+      position: relative;
+      background-color: white;
+      width: 100%;
+      &__text{
+        border: none;
+        padding: 0 30px 0 10px;
+        width: 100%;
+        line-height: 50px;
+        font-size: 16px;
+      }
+      &__image{
+        position: absolute;
+        right: 10px;
+        input{
+          display: none;
+        }
+      }
+    }
+    &__send-button{
+      color: white;
+      background-color: $color-skyblue;
+      width: 100px;
+      padding: 0 30px;
+      margin-left: 15px;
+      border: none;
+
+    }
+  }
+}
