rename classes in .messages. And  add HTML tag

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -37,17 +37,17 @@
         .main-header__edit-button
           Edit
     .messages
-      .messages__menu
-        .messages__menu__list
-          .messages__menu__list__info
-            .messages__menu__list__info__name
+      .message
+        %ul.message__list
+          %li.message__list__info
+            %p.message__list__info__name
               test-abc
-            .messages__menu__list__info__date
+            %p.message__list__info__date
               2019/08/21(Wed) 15:25:59
-          .messages__menu__list__box
-            .messages__menu__list__box__text
+          %li.message__list__box
+            %p.message__list__box__text
               よろしくお願いします
-            .messages__menu__list__box__image
+            .message__list__box__image
     .form
       %form.form__box
         .form__box__data
