--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -105,7 +105,10 @@ $side-header-height: 100px;
 
 .messages{
   height: calc(100vh - 190px);
+  padding: 0 40px;
+  padding-top: 23px;
 }
+
 
 .form{
   background-color: $color-info;
