Rename __data class to make sense

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -139,7 +139,7 @@
     width: 100%;
     position: absolute;
     top: 20px;
-    &__data{
+    &__inputs{
       position: relative;
       background-color: white;
       width: 100%;
