リファクタリング

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -42,7 +42,7 @@
           %li.message__list__box
             %p.message__list__box__text
               よろしくお願いします
-            %img.message__list__box__image{src: " ", alt: " ", title: ""}
+            =image_tag " ", alt: " ", title: ""
       = render 'message'
     .form
       %form.form__box
