create user model and user_controller
m

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -10,7 +10,7 @@
           =link_to " " do
             %li.side-header__box__menu__list
               =fa_icon("edit")
-          =link_to " " do
+          =link_to edit_user_path(current_user) do
             %li.side-header__box__menu__list
               =fa_icon("cog")
     .groups
