--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -2,25 +2,7 @@
   グループを作成しました
 .wrapper
   .chat-side
-    .side-header
-      .side-header__box
-        %p.side-header__box__user-name
-          test-abc
-        %ul.side-header__box__menu
-          =link_to " " do
-            %li.side-header__box__menu__list
-              =fa_icon("edit")
-          =link_to edit_user_path(current_user) do
-            %li.side-header__box__menu__list
-              =fa_icon("cog")
-    .groups
-      =link_to " " do
-        .group
-          %p.group__title
-            sample
-          %p.group__latest-message
-            よろしくお願いします
-      =render 'group'
+    =render 'users/shared/side-bar'
   .chat-main
     .main-header
       .main-header__title
@@ -28,7 +10,7 @@
           sample
         .main-header__title__info
           Member : sample
-      =link_to " " do
+      =link_to edit_user_path(current_user) do
         .main-header__edit-button
           Edit
     .messages
