Create User management form

--- a/app/assets/stylesheets/_variable.scss
+++ b/app/assets/stylesheets/_variable.scss
@@ -2,6 +2,7 @@
 $color-skyblue: #38AEF0;
 $color-info: #999999;
 $color-message: #434a54;
+$color-alert: #F35500;
 // width or heigth
 $chat-side-width: 300px;
 $side-header-height: 100px;
