--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,8 +1,6 @@
-%p.flash-box
-  グループを作成しました
 .wrapper
   .chat-side
-    =render 'users/shared/side-bar'
+    =render 'shared/side-bar'
   .chat-main
     .main-header
       .main-header__title
