--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,14 +2,11 @@
 @import "./variable";
 @import "./func";
 @import "./user.scss";
+@import "./falsh.scss";
 @import " font-awesome ";
 
 *{
   box-sizing: border-box;
-}
-.flash-box{
-  text-align: center;
-  @include set-color($color-skyblue, white);
 }
 
 .wrapper{
