create actions in groups controller

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import "./variable";
 @import "./func";
 @import "./user.scss";
+@import "./group.scss";
 @import "./falsh.scss";
 @import " font-awesome ";
 
