--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -6,6 +6,7 @@
       %p.message__list__info__date
         = message.created_at.strftime("%Y/%m/%d %H:%M")
     %li.message__list__box
-      %p.message__list__box__text
-        = message.text
-      =image_tag "#{message.image}"
+      - if message.text.present?
+        %p.message__list__box__text
+          = message.text
+      =image_tag message.image.url if message.image.present?
