complete asynchronous message post function. And, fix to f.file_field from f.text_field in index.html.haml

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -154,6 +154,7 @@
       &__image{
         position: absolute;
         right: 10px;
+        cursor: pointer;
         input{
           display: none;
         }
