--- a/app/views/shared/_group.html.haml
+++ b/app/views/shared/_group.html.haml
@@ -1,4 +1,4 @@
-=link_to "/groups/#{group.id}/messages" do
+=link_to group_messages_path(group.id) do
   .group
     %p.group__title
       = group.name
