--- a/app/views/groups/new.html.haml
+++ b/app/views/groups/new.html.haml
@@ -23,7 +23,7 @@
       .chat-group-form__field--left
         %label.chat-group-form__label チャットメンバー
       .chat-group-form__field--right
-        / この部分はインクリメンタルサーチ(ユーザー追加の非同期化)のときにも使用します
+        .chat-group-users.js-add-user
     .chat-group-form__field
       .chat-group-form__field--left
       .chat-group-form__field--right
