--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -8,7 +8,7 @@
           sample
         .main-header__title__info
           Member : sample
-      =link_to edit_user_path(current_user) do
+      =link_to edit_group_path(@group.id) do
         .main-header__edit-button
           Edit
     .messages
