blush up incremental search

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -5,7 +5,7 @@
     .main-header
       .main-header__title
         .main-header__title__name
-          sample
+          =@group.name
         .main-header__title__info
           Member : sample
       =link_to edit_group_path(@group.id) do
