--- a/app/views/groups/new.html.haml
+++ b/app/views/groups/new.html.haml
@@ -24,6 +24,10 @@
         %label.chat-group-form__label チャットメンバー
       .chat-group-form__field--right
         .chat-group-users.js-add-user
+          .chat-group-user
+            %input{:name => "group[user_ids][]", :type => "hidden", :value => "#{current_user.id}"}/
+            %p.chat-group-user__name
+              = current_user.name
     .chat-group-form__field
       .chat-group-form__field--left
       .chat-group-form__field--right
