create Api controller, and Set custom date for message_id

--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,4 +1,4 @@
-.message
+.message{data: {id: "#{message.id}"}}
   %ul.message__list
     %li.message__list__info
       %p.message__list__info__name
