--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,7 @@
 @import "./user.scss";
 @import "./group.scss";
 @import "./falsh.scss";
+@import "./pagination.scss";
 @import " font-awesome ";
 
 *{
