--- a/app/views/groups/_group_user.html.haml
+++ b/app/views/groups/_group_user.html.haml
@@ -2,5 +2,6 @@
   %input{:name => "group[user_ids][]", :type => "hidden", :value => "#{user.id}"}/
   %p.chat-group-user__name
     = user.name
-  .user-search-remove.chat-group-user__btn.chat-group-user__btn--remove.js-remove-btn
-    削除
+  -if current_user.id != user.id
+    .user-search-remove.chat-group-user__btn.chat-group-user__btn--remove.js-remove-btn
+      削除
