--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -149,6 +149,7 @@
       position: relative;
       background-color: white;
       width: 100%;
+      display: flex;
       &__text{
         border: none;
         padding: 0 30px 0 10px;
